Docker con SQLite
Actualizar el Docker con la sqlite para que este ocupe la base de datos local y nativa de Django

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,10 @@ DEBUG=True
 SECRET_KEY=django-insecure-3_itwwv%q1!p(!7fyp#z%jsnbak%n9m8bsjrhd@mur9a0l=^q^
 DJANGO_SETTINGS_MODULE=LoginCRUD.settings.development
 
-# Base de Datos (para desarrollo local con PostgreSQL)
-# DATABASE_URL=postgresql://textilapp_user:textilapp_pass@localhost:5432/textilapp_dev
-
-# Configuración para Producción en Render
+# Configuración para Producción en Render (con SQLite)
 # DEBUG=False
 # SECRET_KEY=tu-clave-secreta-super-segura-para-produccion
 # DJANGO_SETTINGS_MODULE=LoginCRUD.settings.production
-# DATABASE_URL=postgresql://user:password@host:port/database
 
 # Usuarios por defecto (opcional)
 # ADMIN_USERNAME=admin
