--- a/.dockerignore
+++ b/.dockerignore
@@ -52,7 +52,8 @@ Thumbs.db
 
 # Django
 *.log
-db.sqlite3
+# Note: db.sqlite3 is included for production deployment
+# db.sqlite3
 db.sqlite3-journal
 media/
 
